[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
color-eyre = "0.6.2"
rand = "0.8.5"
termion = "2.0.1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "snake"
